--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "concurrently": "^7.0.0"
   },
  "scripts": {
-    "start": "npx concurrently \"npm run start-react\" \"npm run start-server\"",
+    "start": "npx concurrently \"npm run start-server\" \"npm run start-react\"",
     "start-react": "npm start",
     "start-server": "node server/index.js"
   },
