--- a/package.json
+++ b/package.json
@@ -5,16 +5,6 @@
   "type": "module",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.3",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongodb": "^6.8.0",
-    "mongoose": "^8.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
@@ -25,13 +15,11 @@
     "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
- "devDependencies": {
-    "concurrently": "^7.0.0"
-  },
- "scripts": {
-    "start": "npx concurrently \"npm run start-server\" \"npm run start-react\"",
-    "start-react": "npm start",
-    "start-server": "node server/index.js"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
